# wallet-backend-test

./: .env.example  .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: test.yml
.github/workflows/: deploy.yml  tests.yml
infra/: Dockerfile  Dockerfile.dockerignore  default.prod.conf  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml
infra/alloy/: config.alloy
infra/loki/: local-config.yaml
infra/nginx/: default.conf  default.prod.conf
infra/prometheus/: prometheus.yml
src/: manage.py
src/apps/wallets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  wallet_service.py
src/apps/wallets/migrations/: 0001_initial.py  0002_remove_wallet_user.py
src/apps/wallets/tests/: test_models.py  test_serializers.py  test_views.py  test_wallet_service.py  tests_models.py
src/backend/: settings.py  urls.py
src/backend/settings/: base.py  dev.py  local.py  prod.py
src/fixtures/: wallets_data.json
